--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
 </div>
 
     </main><footer>
-  Follow me on <a href="https://twitter.com/0xC05/">Twitter</a>!
+  Follow me on <a href="https://twitter.com/0xC05/">Twitter</a>! [&#x1f36a ;)]
 </footer>
 </div>
   </body>
