--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ You can contact me on Discord - @SYN#3374 if you have any questions or join my <
 
   <br />  <!-- add line break if there is any content -->
     </main><footer>
-  Follow me on <a href="https://twitter.com/0xC05/">Twitter</a>!
+  Follow me on <a href="https://twitter.com/0xC05/">Twitter</a>! [&#x1f36a ;)]
 </footer>
 </div>
   </body>
