--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 <main>
       <h1 id="syns-blog">SYN’s Blog</h1>
 <p>Hello and welcome to my blog! My name is Karan and I document whatever I do/code/make over here.              <br />
-Currently I am studying Computer Science Engineering at a University and I have plans to do OSCP and CCNA.
-You can contact me on Discord - @SYN#3374 if you have any questions or join my <a href="https://discord.gg/Jxx9j5p">Discord Server</a> if you just want to have a chat!</p>
+Currently I am studying Computer Science Engineering at a University and I am a developing CTI Analyst who does OSINT on the side.
+You can contact me on Discord - @SYN#3374 if you have any questions or my <a href="https://keybase.io/0xc05">Keybase</a> if you want a secure method.</p>
 
   <br />  <!-- add line break if there is any content -->
     </main><footer>
